2006-05-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* INSTALL, lib/config.guess, lib/config.sub, lib/texinfo.tex:
	New upstream versions.

2006-05-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (Auxiliary Programs): Fix URL to GCC
	repository, they use SVN now.

2006-05-13  Werner Lemberg  <wl@gnu.org>

	* lib/gnupload: Add support for savannah.gnu.org and
	savannah.nongnu.org.

2006-05-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/Automake/Channels.pm, lib/Automake/Condition.pm,
	lib/Automake/DisjConditions.pm, lib/Automake/Options.pm,
	lib/Automake/VarDef.pm, lib/Automake/Wrap.pm: Fix some typos.

2006-05-11  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh: Sync from Autoconf, as follows:
	Don't use 'path' to talk about file names,
	as per GNU coding standards.  Close a race condition reported by Ralf
	Wildenhues and Stepan Kasal.  There is still a race condition
	on hosts that predate Posix 1003.1-1992, but we can't help this.
	Don't mishandle weird characters like space on pre-Posix hosts.
	Invoke mkdir at most once per dir arg on pre-Posix hosts.

2006-05-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/missing.test, tests/missing2.test: Do not require
	GNUmake.
	* Makefile.am (maintainer-check): Make sure `required=' does not
	follow `. ./defs' in the tests.

	* tests/ansi10.test: Use AC_PROG_CC_STDC.  Fix test that
	ac_cv_prog_cc_stdc isn't just used by Automake code in
	`configure'.
	* tests/ansi6.test, tests/ansi7.test: Likewise.
	* tests/ansi9.test: Likewise.  Do not override by setting
	$U and $(ANSI2KNR) at `make' time; that will be fragile.
	* tests/libobj8.test: Use AC_PROG_CC_STDC.
	* tests/subobj3.test: Likewise.  Use `set -e'.

	* lib/install-sh: Initialize IFS, so field splitting isn't
	turned off later.
	* lib/mkinstalldirs: Likewise.

	* lib/am/java.am (class%DIR%.stamp): Do not assume `$?' has
	the path of the prerequisite added; IRIX 6.5 make does not add