@@ -1,3 +1,14 @@
+2006-05-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/Autom4te/Configure_ac.pm (find_configure_ac): Use
+	`$configure_in' instead of `configure.in', to preserve
+	directory component.
+	* lib/Automake/Configure_ac.pm: Add note that Automake owns
+	this file.
+	* lib/Automake/Channels.pm: Likewise.
+	* lib/Automake/FileUtils.pm: Likewise.
+	* lib/Automake/Struct.pm: Likewise.
+
 2006-05-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* INSTALL, lib/config.guess, lib/config.sub, lib/texinfo.tex:
